[package]
name = "handler"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/handler.rs"

[dependencies]
axum = "0.7.5"
http = "1.1.0"
aws-config = { version = "=1.5.10", features = ["behavior-version-latest"] }
aws-sdk-sqs = "=1.49.0"
aws-sdk-sso = "=1.49.0"
aws-sdk-sts = "=1.49.0"
aws-sdk-ssooidc = "=1.50.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zerofrom = "=0.1.5"
litemap = "=0.7.4"

[build-dependencies]
rustc_version = "0.4.0"
